[tool.poetry]
name = "multi-ling-chatbot"
version = "0.1.0"
description = ""
authors = ["Frankline Ononiwu <franklinen.ononiwu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
